<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="#330547">

    <TextView
        android:text="@string/sign_up"
        android:textSize="26sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:layout_marginBottom="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:text="@string/centre_stage2"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:gravity="center"
        android:layout_marginBottom="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <!-- Username Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/username"
        app:boxStrokeColor="#6200EE">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/UsernameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="#9A9595" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Email Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/email"
        app:boxStrokeColor="#6200EE">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="#9A9595" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Password Field -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:hint="@string/password"
        app:boxStrokeColor="#6200EE"
        app:endIconMode="password_toggle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="#9A9595" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Create Account"
        android:layout_marginTop="16dp"
        android:backgroundTint="#6200EE"
        android:textColor="#FFFFFF" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="OR"
        android:textColor="@android:color/white"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="12dp" />

    <!-- Google Button -->
    <Button
        android:id="@+id/googleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_google2"
        android:layout_marginTop="8dp"
        android:backgroundTint="#DB4437"
        android:textColor="#FFFFFF" />

    <!-- Phone Button -->
    <Button
        android:id="@+id/phoneButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/continue_phone2"
        android:layout_marginTop="8dp"
        android:backgroundTint="#34A853"
        android:textColor="#FFFFFF" />

</LinearLayout>
